# outlier_plotting

./: .gitignore  README.md  environment.yml  examples.ipynb  outlier_plot.ipynb  outliers.py  pyproject.toml  requirements.txt  setup.py
outlier_plotting/: sns.py
