[tool.poetry]
name = "outlier_plotting"
version = "0.2.0"
description = "More graceful handling of outliers in plots"
authors = ["Lorenz Wendlinger <wendling@fim.uni-passau.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6"
seaborn = ">=0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
